# templates

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: main.yaml
cpp/: README.md  cookiecutter.json
cpp/hooks/: post_gen_project.py  pre_gen_project.py
cpp/{{cookiecutter.project_name}}/: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt  justfile
cpp/{{cookiecutter.project_name}}/.github/workflows/: main.yaml
cpp/{{cookiecutter.project_name}}/.zed/: debug.json
cpp/{{cookiecutter.project_name}}/data/: test.lldb
cpp/{{cookiecutter.project_name}}/src/: lib.cpp  lib.hpp  main.cpp
cpp/{{cookiecutter.project_name}}/test/: cli.cpp
doc/: index.md
python/: README.md  cookiecutter.json  justfile  pyproject.toml
python/hooks/: post_gen_project.py  pre_gen_project.py
python/test/: __init__.py  conftest.py  template_test.py
python/{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml
python/{{cookiecutter.project_name}}/.github/workflows/: main.yaml
python/{{cookiecutter.project_name}}/.zed/: debug.json
python/{{cookiecutter.project_name}}/src/{{cookiecutter.__project_package}}/: __main__.py
python/{{cookiecutter.project_name}}/src/{{cookiecutter.__project_slug}}/: __main__.py
python/{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __main__.py
python/{{cookiecutter.project_name}}/test/: __init__.py
rust/: README.md  cookiecutter.json
rust/hooks/: post_gen_project.py  pre_gen_project.py
rust/{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.yaml  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rustfmt.toml
rust/{{cookiecutter.project_name}}/.github/workflows/: main.yaml
rust/{{cookiecutter.project_name}}/.zed/: debug.json
rust/{{cookiecutter.project_name}}/data/: debug.lldb  test.lldb
rust/{{cookiecutter.project_name}}/src/: lib.rs  main.rs
rust/{{cookiecutter.project_name}}/tests/: cli.rs
test/: __init__.py  conftest.py  cpp_test.py  python_test.py  rust_test.py  util.py  vue_test.py
vue/: README.md  cookiecutter.json  justfile
vue/hooks/: post_gen_project.py  pre_gen_project.py
vue/test/: __init__.py  template_test.py
vue/{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc.yaml  CONTRIBUTING.md  Dockerfile  README.md  eslint.config.js  justfile  package.json  playwright.config.ts  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
vue/{{cookiecutter.project_name}}/.github/workflows/: main.yaml
vue/{{cookiecutter.project_name}}/.zed/: debug.json
vue/{{cookiecutter.project_name}}/src/: App.vue  font.ts  index.css  index.html  index.test.ts  index.ts
vue/{{cookiecutter.project_name}}/test/: index.test.ts
