# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.0"]

[dependency-groups]
dev = [
  "mkdocs~=1.6",
  "mkdocs-material~=9.7",
  "mypy~=1.19",
  "pymdown-extensions~=10.20",
  "pytest~=9.0",
  "pytest-cookies~=0.7.0",
  "pytest-mock~=3.15",
  "ruff~=0.14.0",
]

[project]
authors = [
  { email = "macklan.weinstein@gmail.com", name = "Macklan Weinstein" },
]
description = "Cookiecutter project templates. "
keywords = []
license = "MIT"
name = "templates"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
version = "0.2.1"

[tool.mypy]
cache_dir = ".vendor/cache/mypy"
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
  '\.benchmarks/',
  '\.hypothesis/',
  '\.vendor/',
  '\.venv/',
  'tmp/',
  '\{\{cookiecutter.project_name\}\}/',
]
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-sv"
cache_dir = ".vendor/cache/pytest"
filterwarnings = ["ignore::DeprecationWarning"]
python_files = ["__init__.py", "*_test.py"]
testpaths = ["test"]

[tool.ruff]
cache-dir = ".vendor/cache/ruff"
extend-exclude = ["[{][{]cookiecutter.project_name[}][}]"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
flake8-annotations = { allow-star-arg-any = true }
pydocstyle = { convention = "google" }
ignore = [
  "COM",     # Rule conflicts with formatter.
  "EXE003",  # Uv should be shebang executor.
  "FBT",     # Boolean function arguments are acceptable.
  "FIX",     # Todo comments are acceptable.
  "ICN",     # Import abbreviations reduce readability.
  "PLR2004", # Constant numerical comparisons are often readable.
  "S101",    # Assert statements are standard for test functions.
  "S603",    # Rule warns about using subprocess commands without a solution.
  "S607",    # Partial paths for process executables is more cross platform.
  "T201",    # Print statements are acceptable for CLI applications.
  "T203",    # Print statements are acceptable for CLI applications.
  "TD",      # Todo formatting is excessive for personal projects.
]
select = ["ALL"]

[tool.uv]
package = false
