# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml.

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling~=1.0"]

[dependency-groups]
dev = [
  "coverage[toml]~=7.13",
  "mkdocs~=1.6",
  "mkdocs-material~=9.7",
  "mkdocstrings~=1.0",
  "pymdown-extensions~=10.20",
  "pytest~=9.0",
  "pytest-cov~=7.0",
  "pytest-mock~=3.15",
  "ruff~=0.15.1",
  "toml~=0.10.0",
  "ty~=0.0.16",
  "types-toml~=0.10.8",
]

[project]
{%- if cookiecutter.project_cli %}
dependencies = [
  "typer~=0.21.0"
]
{%- else %}
dependencies = []
{%- endif %}
description = "{{ cookiecutter.project_description }}"
keywords = []
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">=3.10.0,<4.0.0"
version = "0.1.0"

{% if cookiecutter.project_cli -%}
[project.scripts]
{{ cookiecutter.project_name }} = "{{ cookiecutter.__project_package }}.__main__:cli"
{% endif -%}

[tool.coverage.report]
exclude_lines = [
  "if sys.version_info.*",
  "pragma: no cover",
  "raise NotImplementedError",
]
fail_under = 0
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["{{ cookiecutter.__project_package }}"]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.__project_package }}"]

[tool.pytest]
addopts = ["-sv"]
cache_dir = ".vendor/cache/pytest"
markers = ["e2e: mark as end to end test.", "unit: mark as unit test."]
python_files = ["__init__.py", "*_test.py"]
testpaths = ["src", "test"]

[tool.ruff]
cache-dir = ".vendor/cache/ruff"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
flake8-annotations = { allow-star-arg-any = true }
pydocstyle = { convention = "google" }
ignore = [
  "COM",     # Rule conflicts with formatter.
  "EXE003",  # Uv should be shebang executor.
  "FBT",     # Boolean function arguments are acceptable.
  "FIX",     # Todo comments are acceptable.
  "ICN",     # Import abbreviations reduce readability.
  "PLR2004", # Constant numerical comparisons are often readable.
  "S101",    # Assert statements are standard for test functions.
  "S603",    # Rule warns about using subprocess commands without a solution.
  "S607",    # Partial paths for process executables is more cross platform.
  "T201",    # Print statements are acceptable for CLI applications.
  "T203",    # Print statements are acceptable for CLI applications.
  "TD",      # Todo formatting is excessive for personal projects.
]
select = ["ALL"]

[tool.ty]
terminal = { error-on-warning = true }
