# Cargo manifest file for compiling Rust code.
#
# For more information, visit
# https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
categories = []
description = "{{ cookiecutter.project_description }}"
edition = "2024"
keywords = []
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
version = "0.1.0"

[dependencies]
{%- if cookiecutter.project_cli %}
clap = { features = ["derive"], version = "^4.5.0" }
{%- endif %}
eyre = "^0.6.0"

[dev-dependencies]
approx = "^0.5.0"
assert_cmd = "^2.1.0"
criterion = { features = ["html_reports"], version = "^0.7.0" }
predicates = "^3.1.0"
proptest = "^1.9.0"
rstest = "^0.26.0"
tempfile = "^3.23.0"
test-case = "^3.3.0"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
cargo-tarpaulin = "^0.34.0"

[[bench]]
harness = false
name = "main"
