# Cargo manifest file for compiling Rust code.
#
# For more information, visit
# https://doc.rust-lang.org/cargo/reference/manifest.html.

[package]
categories = ["replaceme"]
description = "{{ cookiecutter.project_description }}"
edition = "2024"
keywords = ["replaceme"]
license = "MIT"
name = "{{ cookiecutter.project_name }}"
readme = "README.md"
repository = "{{ cookiecutter.project_repository }}"
version = "0.1.0"

[dependencies]
{%- if cookiecutter.project_cli %}
clap = { features = ["derive"], version = "^4.6.0" }
{%- endif %}
eyre = "^0.6.0"

[dev-dependencies]
approx = "^0.5.0"
assert_cmd = "^2.2.0"
criterion = { features = ["html_reports"], version = "^0.8.0" }
predicates = "^3.1.0"
proptest = "^1.11.0"
rstest = "^0.26.0"
tempfile = "^3.27.0"
test-case = "^3.3.0"

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
